# 2DKS_Solver

./: .gitignore  CMakeLists.txt  DirectSolve_2DKS_v1_0.m  DirectSolve_2DKS_v2_0.m  LICENSE  Makefile  README.md  aggregateResults  cpp_code_map.txt  gif2avi.m  gitpush.sh  load_2DKSsolution.m  main_2DKS.m  main_2DKS_v2_0.m  multiply2D.m  optimize_2DKS.m  optimize_stepsize.m  param_driver.py  plot2DKS.m  plot_2DKS.m  plot_measures.m  run_2DKS.m  run_2DKS.sh  run_array.sh  run_task_array.sh  save_2DKSsolution.m  save_measures.m  solve_2DKS.m  solver  spatialconvergence_2DKS.m  temporalconvergence_2DKS.m  test_kappa.m  testvalidation_script.m  validation_script.m
src_cpp/: CMakeLists.txt  Makefile  common.h  main.cpp  run_2DKS.cpp  runscript.sh
src_cpp/Data/: generateFigures.m
src_cpp/dataFunctions/: updateDirectory.cpp  updateDirectory.h
src_cpp/dataObjects/: FFTWPlanner.cpp  FFTWPlanner.h  SolutionData.cpp  SolutionData.h
src_cpp/dataProcessing/: FFTWPlanner.cpp  FFTWPlanner.h  SolutionData.cpp  SolutionData.h
src_cpp/mainFunctions/: readParameterSettings.cpp  readParameterSettings.h  writePathNames.cpp  writePathNames.h
src_cpp/mainObjects/: Parameters.cpp  Parameters.h  Pathnames.h  Timer.cpp  Timer.h
src_cpp/main_functions/: readParameterSettings.cpp  writePathNames.cpp
src_cpp/main_objects/: Parameters.h  Pathnames.h  Timer.cpp  Timer.h
src_cpp/problemSolver/: Solver.cpp  Solver.h
src_cpp/processingFunctions/: updateDirectory.cpp
src_cpp/processing_functions/: delete_data.cpp  delete_data.h  delete_data.hpp  load_data.cpp  load_data.h  load_data.hpp  save_data.cpp  save_data.h  save_data.hpp  updateDirectory.cpp  updateDirectory.h
src_cpp/runscripts/: runscript.sh
src_cpp/solverFunctions/: solver.cpp  solver.h
src_cpp/solverObjects/: SolutionData.cpp  SolutionData.h  Solver.cpp  Solver.h  (+2 more)
(+107 files in other folders)
